[gd_scene load_steps=5 format=3 uid="uid://flminbkdqexq"]

[ext_resource type="Script" path="res://Scripts/CharacterSelector/body.gd" id="1_mv848"]
[ext_resource type="Texture2D" uid="uid://cr7eb4ildr06k" path="res://Assets/Axolotl/Spritesheets/Axolotl_Black_Dash.png" id="2_jxnm6"]
[ext_resource type="Script" path="res://Scripts/CharacterSelector/hat.gd" id="3_sylec"]
[ext_resource type="Texture2D" uid="uid://dhu4v7m02uqk5" path="res://Assets/Axolotl/Santa Hats/Kyra_Santa_Hat.png" id="4_k0tld"]

[node name="CharacterSelector" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1284.0
offset_bottom = 728.0
color = Color(0.0119538, 0.37507, 0.413747, 1)

[node name="Skeleton" type="Node2D" parent="."]
position = Vector2(606, 456)
scale = Vector2(10, 10)

[node name="Body" type="Node2D" parent="Skeleton"]
script = ExtResource("1_mv848")

[node name="BodySprite" type="Sprite2D" parent="Skeleton/Body"]
texture = ExtResource("2_jxnm6")

[node name="Hat" type="Node2D" parent="Skeleton"]
script = ExtResource("3_sylec")

[node name="HatSprite" type="Sprite2D" parent="Skeleton/Hat"]
position = Vector2(-7, -14)
scale = Vector2(0.0582707, 0.0582707)
texture = ExtResource("4_k0tld")

[node name="Panel" type="Panel" parent="."]
offset_left = 431.0
offset_top = 458.0
offset_right = 793.0
offset_bottom = 528.0
pivot_offset = Vector2(177, 6)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorSelector" type="CenterContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/ColorSelector"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="Panel/VBoxContainer/ColorSelector/HBoxContainer"]
layout_mode = 2
text = "Color"

[node name="PreviousBtn" type="Button" parent="Panel/VBoxContainer/ColorSelector/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Previous"

[node name="NextBtn" type="Button" parent="Panel/VBoxContainer/ColorSelector/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Next "

[node name="HatSelector" type="CenterContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HatSelector"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="Panel/VBoxContainer/HatSelector/HBoxContainer"]
layout_mode = 2
text = "Hat    "

[node name="PreviousBtn" type="Button" parent="Panel/VBoxContainer/HatSelector/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Previous"

[node name="NextBtn" type="Button" parent="Panel/VBoxContainer/HatSelector/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Next "
